add static maps

--- a/static/index.html
+++ b/static/index.html
@@ -708,17 +708,29 @@ class GeoJSONFeature(BaseModel):
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">Point</div>
             <img src="graphics/geo/geo_point.png">
         </section>
+        <section id="map-point" data-background="">
+            <iframe data-src="/maps/point/" width="960px" height="700px"></iframe>
+        </section>
         <section id="geojson-linestring">
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">LineString</div>
             <img src="graphics/geo/geo_linestring.png">
+        </section>
+        <section id="map-linestring" data-background="">
+            <iframe data-src="/maps/linestring/" width="960px" height="700px"></iframe>
         </section>
         <section id="geojson-polygon">
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">Polygon</div>
             <img src="graphics/geo/geo_polygon.png">
         </section>
+        <section id="map-polygon" data-background="">
+            <iframe data-src="/maps/geo-polygon/" width="960px" height="700px"></iframe>
+        </section>
         <section id="geojson-multi-polygon">
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">Multi-Polygon</div>
             <img src="graphics/geo/geo_multipolygon.png">
+        </section>
+        <section id="map-multipolygon" data-background="">
+            <iframe data-src="/maps/multipolygon/" width="960px" height="700px"></iframe>
         </section>
 
         <section id="geojson-basemodel">
