slides: wip geojson

--- a/static/maps/point/index.html
+++ b/static/maps/point/index.html
@@ -262,7 +262,7 @@
 
     var geojsonMarkerOptions = {
         radius: 12,
-        fillColor: "#ff7800",
+        fillColor: "rgba(52, 136, 255, 1)",
         color: "#666",
         weight: 0,
         opacity: 1,
