slides: add duck

--- a/static/index.html
+++ b/static/index.html
@@ -384,6 +384,7 @@ async def root(term: str = None) -> dict[str, list[str]]:
         </section>
 
         <section id="typing-bdfl" data-background="graphics/background/bdfl.png"></section>
+        <section id="typing-duck" data-background="graphics/background/duck.png"></section>
 
         <section id="typing-basics-1">
             <pre>
