slides: add data layers demo backgroun

--- a/static/index.html
+++ b/static/index.html
@@ -998,6 +998,16 @@ class MultiPolygon(BaseModel):
         <section id="geojsonio-commonwealth-electorate" data-background="graphics/geojsonio3.png"></section>
         <section id="geojsonio-state-electorate" data-background="graphics/geojsonio4.png"></section>
 
+        <section id="data-layers1" data-background="graphics/s1.png"></section>
+        <section id="data-layers2" data-background="graphics/s2.png"></section>
+        <section id="data-layers3" data-background="graphics/s3.png"></section>
+        <section id="data-layers4" data-background="graphics/s4.png"></section>
+        <section id="data-layers5" data-background="graphics/s5.png"></section>
+        <section id="data-layers6" data-background="graphics/s6.png"></section>
+        <section id="data-layers7" data-background="graphics/s7.png"></section>
+        <section id="data-layers8" data-background="graphics/s8.png"></section>
+
+
         <section id="geojson-basemodel">
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">GeoJSON BaseModel</div>
             <pre>
