slides: add probably unused datum

--- a/static/index.html
+++ b/static/index.html
@@ -181,7 +181,6 @@
             </div>
         </section>
 
-
         <section id="title-fastapi"  data-background="graphics/github_fastapi.png">
             <div style="background-color: rgba(0, 0, 0, 0.6); color: #fff; padding: 20px;">
                 <div style="font-size: 200%">FastAPI</div>
@@ -479,7 +478,6 @@ TypeError: unsupported operand type(s) for *: 'Foo' and 'int'</code>
             </pre>
         </section>
 
-
         <section id="typing-strictly-validate">
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
                 <em>But I want strictly validate my <code>types</code> ...</em>
@@ -507,13 +505,11 @@ Pylons/colander
 
             </aside>
         </section>
-
         <section id="title-pydantic"  data-background="graphics/github_pydantic.png">
             <div style="background-color: rgba(0, 0, 0, 0.6); color: #fff; padding: 20px;">
                 <div style="font-size: 200%">Pydantic</div>
             </div>
         </section>
-
         <section id="pydantic-dataclasses">
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;"><code>dataclass</code> </div>
             <pre>
@@ -536,7 +532,6 @@ class MyDataClass:
                 Something to do with serialisation.
             </aside>
         </section>
-
         <section id="pydantic-validation-basic-0">
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">Pydantic BaseModel</div>
             <pre>
@@ -682,7 +677,6 @@ my_class
             </pre>
         </section>
 
-
         <section id="pydantic-validation-Literal">
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;"><code>Literal</code> is good</div>
             <pre class="width-fit" style="padding: 0; margin-left: 0; margin-right: 0;">
@@ -720,7 +714,6 @@ class FeatureProperty(BaseModel):
 </code>
             </pre>
         </section>
-
         <section id="pydantic-validation-literal-address-traceback-boom1" data-background="graphics/explode.gif"></section>
         <section id="pydantic-validation-literal-address-traceback">
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">Invalid <code>Literal</code> is nope</div>
@@ -1050,6 +1043,17 @@ class MultiPolygon(Geometry):
             <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
                 <div style="font-size: 200%"></div>
             </div>
+        </section>
+
+        <section data-visibility="hidden">
+            <section id="xkcd" data-background="graphics/xkcd.png"></section>
+            <section id="xkcd-datum" data-background="graphics/xkcd-datum.png"></section>
+            <section id="xkcd-datum-enhance" data-background="graphics/xkcd-datum_enhance.png"></section>
+            <section id="pyproj">
+                <div style="background-color: rgba(0, 0, 0, 0.9); color: #fff; padding: 20px;">
+                    <div style="font-size: 200%"></div>
+                </div>
+            </section>
         </section>
 
         <section id="fin">
